# cloned_it

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  app-dev.yaml  app-prod.yaml  index.yaml  pyproject.toml  requirements.txt
.github/workflows/: code-checks.yml  deploy-application.yml  deploy-cloud-functions.yml  deploy-database.yml  deploy.yml
app/: __init__.py  __main__.py  config.py  constants.py  mysql_routes.py  routes.py
app/auth/: __init__.py  routes.py
app/models/: user.py
app/templates/: base.html  index.html  posts.html  profile.html
app/templates/admin/: stats.html
app/utils/: cloud_functions.py  datastore_client.py  firestore_client.py  mysql_client.py  secret_manager.py  session_client.py
app/utils/logging/: constants.py  logger.py  security_decorators.py  security_logger.py
database/: schema.sql
functions/: .gcloudignore
functions/cleanup_old_posts/: main.py  requirements.txt
functions/cleanup_old_sessions/: constants.py  main.py
functions/create_session/: main.py
functions/delete_session/: main.py
functions/get_datastore_stats/: main.py  requirements.txt
functions/get_mysql_stats/: main.py
functions/get_posts/: constants.py  main.py  requirements.txt
functions/get_sessions_overview/: constants.py  main.py
functions/get_user_session/: main.py
functions/shared/: __init__.py  constants.py  datastore_client.py  db_client.py  requirements.txt
functions/validate_session/: main.py
shell_scripts/: pre_commit.sh
tests/: conftest.py  test_routes.py
